Made endpoint to check open trips DAT-4775
