# api_server/openapi_server/openapi/openapi.yaml
@@ -30,15 +30,46 @@ paths:
             application/vnd.openxmlformats-officedocument.spreadsheetml.sheet:
               schema:
                 $ref: '#/components/schemas/TripsResponseFile'
-            text/csv:
+          description: Returns a list of car trips
+        "204":
+          description: No Content
+        "400":
+          content:
+            application/problem+json:
               schema:
-                $ref: '#/components/schemas/TripsResponseFile'
-            application/pdf:
+                $ref: 'https://opensource.zalando.com/problem/schema.yaml#/Problem'
+          description: Bad Request
+        "401":
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'https://opensource.zalando.com/problem/schema.yaml#/Problem'
+          description: No authorization token provided
+        "403":
+          content:
+            application/problem+json:
+              schema:
+                $ref: 'https://opensource.zalando.com/problem/schema.yaml#/Problem'
+          description: Provided token doesn't have the required scope
+      x-openapi-router-controller: openapi_server.controllers.default_controller
+      security:
+        - oauth2: [carusage.write]
+  /check/open-trips:
+    get:
+      description: Returns a list of all car trips that have not been checked yet
+      operationId: check_open_trips
+      parameters:
+        - $ref: '#/components/parameters/filterEndedAfterParam'
+        - $ref: '#/components/parameters/filterEndedBeforeParam'
+      responses:
+        "200":
+          content:
+            application/vnd.openxmlformats-officedocument.spreadsheetml.sheet:
               schema:
                 $ref: '#/components/schemas/TripsResponseFile'
           description: Returns a list of car trips
         "204":
-          description: No Content
+          description: There are no open trips under this manager
         "400":
           content:
             application/problem+json:
